# monadline

./: .gitignore  LICENSE  Main.hs  Makefile  MonadLine.hs  PowerlineCharacters.hs  README.md  Segments.hs  bash_monadline.sh  monadline.cabal
